# powerplant-coding-challenge

./: README.md  myREADME.md  production_plan.py  pyproject.toml  yourREADME.md
power_plant_challenge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
