[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "power-plant-challenge"
version = "0.1.0"
description = "REST API for energy production planning"
requires-python = ">=3.8"
authors = [
  {name = "Martín Serrano", email = "m.serranojuste@gmail.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
dependencies = [
  "flask",
]
readme = "myREADME.md"



[project.scripts]
power-plant-cli = "production_plan:main_cli"